--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@researchgate/react-intersection-observer": "^1.0.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
+    "fontsource-roboto": "^4.0.0",
     "j-toker": "0.0.10-beta3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -39,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3"
   }
 }
