--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3"
   }
