--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,9 @@
     ".dockerignore": "ignore",
     ".eslintignore": "ignore"
   },
-
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
   "editor.tabSize": 2,
+  "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
@@ -19,5 +18,8 @@
   "javascript.validate.enable": false,
   "javascript.format.enable": false,
   "typescript.format.enable": false,
-  "typescript.tsserver.experimental.enableProjectDiagnostics": false
+  "typescript.tsserver.experimental.enableProjectDiagnostics": false,
+  "workbench.editorAssociations": [
+  
+  ]
 }
