--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@researchgate/react-intersection-observer": "^1.0.5",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/user-event": "^12.6.2",
     "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "fontsource-roboto": "^4.0.0",
     "j-toker": "0.0.10-beta3",
@@ -48,9 +48,23 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.7",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4",
+    "prettier": "^2.2.1",
     "ts-loader": "^8.0.14",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
     "typescript": "^4.1.3"
   }
 }
