--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 PORT=3001
-REACT_APP_URL='http://localhost:3000'
+REACT_APP_URL='https://rewordbackend.herokuapp.com'
 REACT_APP_WS='ws://localhost:3000/cable'
