--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
     "fontsource-roboto": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -24,7 +25,9 @@
     "recharts": "^2.0.0-beta.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.0.1"
+    "snakecase-keys": "^3.2.1",
+    "styled-components": "^5.0.1",
+    "to-snake-case": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,8 +55,9 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.7",
     "@types/redux-logger": "^3.0.8",
+    "@types/styled-components": "^5.1.7",
+    "@types/to-snake-case": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint-config-airbnb": "^18.2.1",
