--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "redux-persist": "^6.0.0",
     "snakecase-keys": "^3.2.1",
     "styled-components": "^5.0.1",
-    "to-snake-case": "^1.0.0"
+    "to-snake-case": "^1.0.0",
+    "typescript": "^4.1.3",
+    "ts-loader": "^8.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -68,9 +70,7 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4",
     "prettier": "^2.2.1",
-    "ts-loader": "^8.0.14",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^9.0.0",
-    "typescript": "^4.1.3"
+    "tslint-config-standard": "^9.0.0"
   }
 }
