--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/error-message": "^0.0.5",
+    "@hookform/resolvers": "^1.3.4",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -11,25 +12,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
-    "axios": "^0.21.1",
-    "date-fns": "^2.16.1",
-    "fontsource-roboto": "^4.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-ga": "^3.3.0",
-    "react-hook-form": "^6.14.2",
-    "react-redux": "^7.2.2",
-    "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.1",
-    "recharts": "^2.0.0-beta.1",
-    "redux-persist": "^6.0.0",
-    "redux-logger": "^3.0.6",
-    "snakecase-keys": "^3.2.1",
-    "styled-components": "^5.0.1",
-    "to-snake-case": "^1.0.0",
-    "typescript": "^4.1.3",
-    "ts-loader": "^8.0.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
@@ -39,6 +21,8 @@
     "@types/to-snake-case": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "2.22.1",
@@ -46,9 +30,27 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4",
+    "fontsource-roboto": "^4.0.0",
     "prettier": "^2.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
+    "react-hook-form": "^6.14.2",
+    "react-redux": "^7.2.2",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "4.0.1",
+    "recharts": "^2.0.0-beta.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "snakecase-keys": "^3.2.1",
+    "styled-components": "^5.0.1",
+    "to-snake-case": "^1.0.0",
+    "ts-loader": "^8.0.14",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^9.0.0"
+    "tslint-config-standard": "^9.0.0",
+    "typescript": "^4.1.3",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -71,6 +73,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
